# vibe_hub

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  pyproject.toml
.github/workflows/: ci.yml  image.yml
agent_codegen/: __init__.py  work_item_1.py
agent_hub.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
alembic/: env.py
alembic/versions/: 0001_initial.py  (+3 more)
app/: __init__.py  api_ui.py  auth.py  config.py  db.py  git_ops.py  github_repo.py  github_sync.py  github_webhooks.py  gitlab_sync.py  http_auth.py  job_queue.py  job_worker.py  main.py  models.py  orchestration.py  permissions.py  providers.py  rate_limit.py  repo_security.py  schemas.py  security.py  tracing.py  worker_main.py
docs/: OPERATIONS.md
scripts/: backup_db.sh  bootstrap_dev.sh  check_large_files.sh  demo.sh  dogfood_github_sync.sh  install_cosign.sh  restore_db.sh  smoke.sh  validate_production_env.sh  verify_image_signature.sh
tests/: test_agents_api.py  test_auth.py  test_auth_integration.py  test_autopilot.py  test_bootstrap_dev_script.py  test_check_large_files_script.py  test_db.py  test_git_ops.py  test_github_repo.py  test_github_sync.py  test_github_sync_api.py  test_github_webhooks.py  test_gitlab_sync.py  test_gitlab_sync_api.py  test_http_auth.py  test_job_queue.py  test_migrations_forward_only.py  test_production_safety.py  test_providers.py  test_read_auth.py  test_security.py  test_tracing.py  test_validate_production_env_script.py  test_verify_image_signature_script.py  test_work_item_1.py
(+2 files in other folders)
